cargo-features = ["edition2021"]

[package]
name = "rox"
version = "0.1.0"
edition = "2021"

[dependencies]
fxhash = "0.2.1"
indexmap = "1.7.0"
log = { version = "0.4.14", features = ["max_level_trace", "release_max_level_info"] }
logos = "0.12.0"
unicode-width = { version = "0.1.8", optional = true }

[features]
default = ["full-unicode"]

full-unicode = ["unicode-width"]
nan-boxing = []

[dev-dependencies]
pretty_env_logger = "0.4.0"
