[package]
name = "lipo"
version = "0.1.0"
edition = "2021"


[dependencies]
codespan-reporting = "0.11.1"
fxhash = "0.2.1"
logos = "0.12.0"
termcolor = "1.1.2"
tracing = { version = "0.1.29", features = ["max_level_trace", "release_max_level_info"] }
unicode-width = "0.1.8"

lipo_macro = { path = "../lipo_macro" }
petgraph = "0.6.0"


[features]
default = []

# GC stress testing
#
# Runs garbage collection on every interpreter cycle. This is super slow but
# should uncover bugs in the GC faster, hopefully.
gc-stress = []

# Parser testing
#
# Causes the parser to panic when it encounters an error, allowing to get a
# backtrace of the error.
parser-error-panic = []


[dev-dependencies]
tracing-subscriber = "0.2.25"
unindent = "0.1.7"
